2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 3.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 3.4.0, resolves #22

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add API for reporting about configuration issues, resolves #18
	* Update documentation settings, resolves #19
	* Use JSON for sample files, resolves #21

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2019-01-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Restore ViewHelper compatibility with TYPO3 8, resolves #15
	* Release version 3.3.1

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensure compatibility with TYPO3 9, drop devLog usage, resolves #13
	* Add API to store content of distant source into temporary file, resolves #14
	* Release version 3.3.0

2018-12-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, clean up code and prepare for compatibility with TYPO3 9, resolves #12.

2018-10-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added unit tests for ConnectorUtility
	* Added possibility to interpret namespaces when converting XML to array (thanks to Ceremony64)

2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed accessing files within lockRootPath, resolves #10
	* Released version 3.2.4

2018-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.2.3

2018-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed PHP 7.1 constructs, resolves #6
	* Fixed accessing files with path relative to web root, resolves #7
	* Released version 3.2.1 and 3.2.2 (mixup during release)

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.2.0

2018-01-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
